# meshtastic-mqtt-monitor

./: .coverage 2  .coverage 3  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  MANIFEST.in  README.md  config.example.yaml  main.py  pyproject.toml  renovate.json  test_installation.sh
.kiro/specs/meshtastic-mqtt-monitor/: design.md  requirements.md  tasks.md
src/: __init__.py  config.py  decoder.py  formatter.py  monitor.py  mqtt_client.py
tests/: __init__.py  test_config.py  test_decoder.py  test_formatter.py  test_integration.py  test_mqtt_client.py
